# block_match

./: .gitignore  Activity1.nvact  CMakeLists.txt  block_match.sln  common.props  cuda.props  libmatch.props  libmatchmex.props  match.sln  mex.props
array_match_mex/: CMakeLists.txt  array_match_mex.def  array_match_mex.vcxproj  array_match_mex.vcxproj.filters  common.h  mexFunction.c  mexFunction.cpp  parse_parameter.c  parse_parameter.cpp  utils.c  utils.cpp
block_match/: array_match_execute.cpp  array_match_finalize.cpp  array_match_initialize.cpp  block_match.cpp  block_match.cuh  block_match.h  block_match.vcxproj  block_match.vcxproj.filters  block_match_cc.cu  block_match_execute.hpp  block_match_execution_launcher.cpp  block_match_finalize.cpp  block_match_index_covert.cpp  block_match_initialize.cpp  block_match_internal.cpp  block_match_internal.h  block_match_mse.cu  block_match_process.cpp  block_match_process.i  block_match_sort.cpp  block_padding.cpp  logging.cpp  padding.cpp  stack_vector.hpp  thread_pool.cpp  thread_pool.h  thread_pool_posix.cpp  utils.cpp
block_match_mex/: CMakeLists.txt  block_match_mex.def  block_match_mex.vcxproj  block_match_mex.vcxproj.filters  common.h  dllmain.c  generate_result.c  generate_result.cpp  mexFunction.c  mexFunction.cpp  mxUtils.c  parse_para.c  parse_parameter.c  parse_parameter.cpp  utils.c  utils.cpp  utils.h  validate_parameter.c  validate_parameter.cpp
include/: block_match.h  lib_match.h  lib_match_mex_common.h
lib_match/: CMakeLists.txt  array_copying.cpp  array_match_execute.cpp  array_match_execute.hpp  array_match_finalize.cpp  array_match_initialize.cpp  array_match_mse_cublas.cu  block_copying.cpp  block_match.cpp  block_match_cc.cu  block_match_cc_cpu.cpp  block_match_destroy.cpp  block_match_execute.cpp  block_match_execute.h  block_match_execute.hpp  block_match_execution_launcher.cpp  block_match_finalize.cpp  block_match_initialize.cpp  block_match_internal.cpp  block_match_internal.h  block_match_mse.cu  block_match_mse_cpu.cpp  block_match_mse_cublas.cu  block_match_sort.cpp  block_padding.cpp  execution_service.cpp  instruction_set.cpp  interrupt_handler.cpp  intrinsic_func_helper.hpp  lib_match.cpp  lib_match.vcxproj  lib_match.vcxproj.filters  lib_match_cc.cu  lib_match_cc_cpu.cpp  lib_match_cublas.cpp  lib_match_execute.hpp  lib_match_initialize.cpp  lib_match_initialize.h  lib_match_internal.cpp  lib_match_internal.h  (+18 more)
lib_match_gpu/: lib_match_cc.cu  lib_match_gpu.h  lib_match_gpu.vcxproj  lib_match_gpu.vcxproj.filters  lib_match_mse.cu
lib_match_mex/: CMakeLists.txt  cpp_mexapi_version.cpp  initialize.c  initialize.cpp  instruction_set_check.cpp  interrupt_detector.cpp  lib_match_mex.vcxproj  lib_match_mex.vcxproj.filters  lib_match_mex_internal.h  logging.c  logging.cpp  parsing.c  parsing.cpp  utils.c  utils.cpp
matlab/: arrayMatch.m  blockMatch.m  blockMatchMatlab.m  run_test.m  test_block_match.m  v1tov2.m  v2tov1.m
pad_2d_mex/: CMakeLists.txt  common.h  mexFunction.cpp  pad_2d_mex.def  pad_2d_mex.vcxproj  parse_parameter.c  parse_parameter.cpp
padding_2d_mex/: common.h  mexFunction.c  padding_2d_mex.def  padding_2d_mex.vcxproj  padding_2d_mex.vcxproj.filters
padding_mex/: common.h  mexFunction.c  padding_mex.vcxproj  padding_mex.vcxproj.filters
spdlog/: spdlog.props
test/: CMakeLists.txt  array_match_test_case_1.cpp  array_match_test_case_2.cpp  array_match_test_case_3.cpp  array_match_test_case_4.cpp  packages.config  test.vcxproj  test.vcxproj.filters  test_case_1.cpp  test_case_10.cpp  test_case_11.cpp  test_case_12.cpp  test_case_13.cpp  test_case_2.cpp  test_case_3.cpp  test_case_4.cpp  test_case_5.cpp  test_case_6.cpp  test_case_7.cpp  test_case_8.cpp  test_case_9.cpp  test_common.h  test_main.cpp
(+29 files in other folders)
